{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 665,
  "lineage": "68f53661-6d5e-db6d-9d1e-de8046971a40",
  "resources": [
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f8dce63a6b60467",
            "arn": "arn:aws:ec2:us-east-1:324997758306:instance/i-00b240ea01cd8ae09",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00b240ea01cd8ae09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nti-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cd5f9fe6ae54010e",
            "private_dns": "ip-10-0-1-169.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad211e8da154e9ec",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a4261dd0b2ad2d2a",
            "tags": {
              "Name": "webserver0"
            },
            "tags_all": {
              "Name": "webserver0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246f3c80948a317c"
            ]
          },
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f8dce63a6b60467",
            "arn": "arn:aws:ec2:us-east-1:324997758306:instance/i-0d4319e140e1c392b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d4319e140e1c392b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nti-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08b3f4f69d5ff0c43",
            "private_dns": "ip-10-0-2-114.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.114",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0715a9365d106cecb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dda5f2041def65d7",
            "tags": {
              "Name": "webserver1"
            },
            "tags_all": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246f3c80948a317c"
            ]
          },
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy-servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f8dce63a6b60467",
            "arn": "arn:aws:ec2:us-east-1:324997758306:instance/i-0eba13ba6bd8b7149",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eba13ba6bd8b7149",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nti-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0075439cb211ecde3",
            "private_dns": "ip-10-0-10-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.47",
            "public_ip": "3.84.210.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-048d614ed7e1989f6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09f08a87731aa4adb",
            "tags": {
              "Name": "proxy-server0"
            },
            "tags_all": {
              "Name": "proxy-server0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246f3c80948a317c"
            ]
          },
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f8dce63a6b60467",
            "arn": "arn:aws:ec2:us-east-1:324997758306:instance/i-0937fe66f3601e831",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0937fe66f3601e831",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nti-aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08671ea297b041b17",
            "private_dns": "ip-10-0-20-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.44",
            "public_ip": "54.198.171.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-057b2868799c5b597",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e32591b79b0fa074",
            "tags": {
              "Name": "proxy-server1"
            },
            "tags_all": {
              "Name": "proxy-server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0246f3c80948a317c"
            ]
          },
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group/sg-0246f3c80948a317c",
            "description": "Allow necessary  traffic for webservers ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0246f3c80948a317c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "324997758306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0365f808b6252aebb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0365f808b6252aebb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0246f3c80948a317c",
            "security_group_rule_id": "sgr-0365f808b6252aebb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0afe6f94eea158407",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0afe6f94eea158407",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0246f3c80948a317c",
            "security_group_rule_id": "sgr-0afe6f94eea158407",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ping_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0e30a40080b30815c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0e30a40080b30815c",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0246f3c80948a317c",
            "security_group_rule_id": "sgr-0e30a40080b30815c",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-07aa9c4b5ef984f83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07aa9c4b5ef984f83",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0246f3c80948a317c",
            "security_group_rule_id": "sgr-07aa9c4b5ef984f83",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_module.aws_security_group.web-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "apache-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/apache-lb/c3685fd925bd2d59",
            "arn_suffix": "app/apache-lb/c3685fd925bd2d59",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-apache-lb-303911939.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/apache-lb/c3685fd925bd2d59",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apache-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-063a4b7d69e5d904f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a4261dd0b2ad2d2a"
              },
              {
                "subnet_id": "subnet-0dda5f2041def65d7"
              }
            ],
            "subnets": [
              "subnet-0a4261dd0b2ad2d2a",
              "subnet-0dda5f2041def65d7"
            ],
            "vpc_id": "vpc-0f3efcc5649a4101e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "proxy-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/proxy-lb/53b0b26e358b57a8",
            "arn_suffix": "app/proxy-lb/53b0b26e358b57a8",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "proxy-lb-987726823.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/proxy-lb/53b0b26e358b57a8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proxy-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-063a4b7d69e5d904f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09f08a87731aa4adb"
              },
              {
                "subnet_id": "subnet-0e32591b79b0fa074"
              }
            ],
            "subnets": [
              "subnet-09f08a87731aa4adb",
              "subnet-0e32591b79b0fa074"
            ],
            "vpc_id": "vpc-0f3efcc5649a4101e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/proxy-lb/53b0b26e358b57a8/96badbd6f3e632eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/proxy-lb/53b0b26e358b57a8/96badbd6f3e632eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/proxy-lb/53b0b26e358b57a8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_module.aws_lb.proxy-lb",
            "module.elb_module.aws_lb_target_group.proxy-tg",
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/apache-lb/c3685fd925bd2d59/e134ecf30dbbdebe",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:listener/app/apache-lb/c3685fd925bd2d59/e134ecf30dbbdebe",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/apache-lb/c3685fd925bd2d59",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_module.aws_lb.apache-lb",
            "module.elb_module.aws_lb_target_group.apache-tg",
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801",
            "arn_suffix": "targetgroup/apache-tg/1ef94aa47b902801",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/apache-lb/c3685fd925bd2d59"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "proxy-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6",
            "arn_suffix": "targetgroup/proxy-tg/f31bc9e053a49fb6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:324997758306:loadbalancer/app/proxy-lb/53b0b26e358b57a8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "proxy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "apache_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801-20240412124325484500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801",
            "target_id": "i-00b240ea01cd8ae09"
          },
          "dependencies": [
            "module.ec2_module.aws_instance.apache_servers",
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.elb_module.aws_lb_target_group.apache-tg",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801-20240412124325596200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/apache-tg/1ef94aa47b902801",
            "target_id": "i-0d4319e140e1c392b"
          },
          "dependencies": [
            "module.ec2_module.aws_instance.apache_servers",
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.elb_module.aws_lb_target_group.apache-tg",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "proxy_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6-20240412125512484400000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6",
            "target_id": "i-0eba13ba6bd8b7149"
          },
          "dependencies": [
            "module.ec2_module.aws_instance.proxy-servers",
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.elb_module.aws_lb_target_group.proxy-tg",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6-20240412125512177800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:324997758306:targetgroup/proxy-tg/f31bc9e053a49fb6",
            "target_id": "i-0937fe66f3601e831"
          },
          "dependencies": [
            "module.ec2_module.aws_instance.proxy-servers",
            "module.ec2_module.aws_security_group.web-sg",
            "module.ec2_module.data.aws_ami.ubuntu",
            "module.elb_module.aws_lb_target_group.proxy-tg",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group/sg-063a4b7d69e5d904f",
            "description": "Allow http inbound traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-063a4b7d69e5d904f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb-sg",
            "name_prefix": "",
            "owner_id": "324997758306",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "lb-allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-0b75b90f7c1bf6dbf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0b75b90f7c1bf6dbf",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-063a4b7d69e5d904f",
            "security_group_rule_id": "sgr-0b75b90f7c1bf6dbf",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.elb_module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "lb-allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:security-group-rule/sgr-04d4d2d7e3469805b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04d4d2d7e3469805b",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-063a4b7d69e5d904f",
            "security_group_rule_id": "sgr-04d4d2d7e3469805b",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb_module.aws_security_group.lb-sg",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9a3a7dcc6e89b8c",
            "association_id": "eipassoc-03a0d84563546d13b",
            "domain": "vpc",
            "id": "eipalloc-0f9a3a7dcc6e89b8c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09f9375ff390d7dce",
            "private_dns": "ip-10-0-10-78.ec2.internal",
            "private_ip": "10.0.10.78",
            "public_dns": "ec2-35-168-83-86.compute-1.amazonaws.com",
            "public_ip": "35.168.83.86",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:internet-gateway/igw-0cff6727268741714",
            "id": "igw-0cff6727268741714",
            "owner_id": "324997758306",
            "tags": {
              "Name": "nti-GW"
            },
            "tags_all": {
              "Name": "nti-GW"
            },
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f9a3a7dcc6e89b8c",
            "association_id": "eipassoc-03a0d84563546d13b",
            "connectivity_type": "public",
            "id": "nat-08b37c114756e2bf9",
            "network_interface_id": "eni-09f9375ff390d7dce",
            "private_ip": "10.0.10.78",
            "public_ip": "35.168.83.86",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09f08a87731aa4adb",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.infrastructure_module.aws_eip.eip",
            "module.infrastructure_module.aws_internet_gateway.gw",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cff6727268741714",
            "id": "r-rtb-09c547484e7937a771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c547484e7937a77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_internet_gateway.gw",
            "module.infrastructure_module.aws_route_table.public-rt",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e1281a22bbe5f14b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08b37c114756e2bf9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e1281a22bbe5f14b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_eip.eip",
            "module.infrastructure_module.aws_internet_gateway.gw",
            "module.infrastructure_module.aws_nat_gateway.nat-gw",
            "module.infrastructure_module.aws_route_table.private-rt",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:route-table/rtb-0e1281a22bbe5f14b",
            "id": "rtb-0e1281a22bbe5f14b",
            "owner_id": "324997758306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08b37c114756e2bf9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:route-table/rtb-09c547484e7937a77",
            "id": "rtb-09c547484e7937a77",
            "owner_id": "324997758306",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cff6727268741714",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Private-Subnet-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0615279ff4ceb8",
            "route_table_id": "rtb-0e1281a22bbe5f14b",
            "subnet_id": "subnet-0a4261dd0b2ad2d2a"
          },
          "dependencies": [
            "module.infrastructure_module.aws_route_table.private-rt",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007051155fd480d59",
            "route_table_id": "rtb-0e1281a22bbe5f14b",
            "subnet_id": "subnet-0dda5f2041def65d7"
          },
          "dependencies": [
            "module.infrastructure_module.aws_route_table.private-rt",
            "module.infrastructure_module.aws_subnet.private-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cf0f7488fda97d3",
            "route_table_id": "rtb-09c547484e7937a77",
            "subnet_id": "subnet-09f08a87731aa4adb"
          },
          "dependencies": [
            "module.infrastructure_module.aws_route_table.public-rt",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081c2ed0f6d9742c5",
            "route_table_id": "rtb-09c547484e7937a77",
            "subnet_id": "subnet-0e32591b79b0fa074"
          },
          "dependencies": [
            "module.infrastructure_module.aws_route_table.public-rt",
            "module.infrastructure_module.aws_subnet.public-subnets",
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-0a4261dd0b2ad2d2a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4261dd0b2ad2d2a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet0"
            },
            "tags_all": {
              "Name": "private_subnet0"
            },
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-0dda5f2041def65d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dda5f2041def65d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-09f08a87731aa4adb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f08a87731aa4adb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet0"
            },
            "tags_all": {
              "Name": "Public_subnet0"
            },
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:subnet/subnet-0e32591b79b0fa074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e32591b79b0fa074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "324997758306",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet1"
            },
            "tags_all": {
              "Name": "Public_subnet1"
            },
            "vpc_id": "vpc-0f3efcc5649a4101e"
          },
          "dependencies": [
            "module.infrastructure_module.aws_vpc.VPC-NTI"
          ]
        }
      ]
    },
    {
      "module": "module.infrastructure_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC-NTI",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:324997758306:vpc/vpc-0f3efcc5649a4101e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c9ec5c92b875aef9",
            "default_route_table_id": "rtb-0b6980ad524294b5a",
            "default_security_group_id": "sg-042eb9d6ae922527f",
            "dhcp_options_id": "dopt-0a37f75e4bdb0e358",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f3efcc5649a4101e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b6980ad524294b5a",
            "owner_id": "324997758306",
            "tags": {
              "Name": "VPC-NTI"
            },
            "tags_all": {
              "Name": "VPC-NTI"
            }
          }
        }
      ]
    }
  ]
}